--- a/main.css
+++ b/main.css
@@ -85,21 +85,37 @@ abbr {
 	
 .intro header {
 	padding: 20px;
-	background: transparent url(/images/color-pallete-extra-small.png) no-repeat top left;
-	background-color: #eaba99;
+	animation: gradient 2s ease infinite;
+	background-image: linear-gradient(135deg, var(--orange), var(--head-color));
+	background-size: 400% 400%;
+	height: 100%;
+	width: 100%;
 	}
+	  
+@keyframes gradient {
+	0% {
+		background-position: 51% 0%;
+	}
+	50% {
+		  background-position: 50% 100%;
+		}
+	100% {
+		background-position: 51% 0%;
+	}
+	}
+
 header h1 { 
 	margin: 0 auto;
 	display: block;
 	text-align: center;
 	font-size: 4rem;
-	color:#58a7dd;
+	color: var(--dark-purple);
 	}
 header h2 { 
 	margin: 0 auto;
 	display: block;
 	text-align: center;
-	color:rgb(88,101,221);
+	color: var(--brown);
 	}
 
 div.main {
