--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ header h2 {
 	margin: 0 auto;
 	display: block;
 	text-align: center;
-	color: var(--brown);
+	color: var(--blue-gray);
 	}
 
 div.main {
@@ -144,14 +144,16 @@ div.main {
 	text-align: center;
 	}
 .summary a{
-	font-weight: bold; 
+	font-size: large;
 	text-decoration: none; 
 	color: var(--blue-gray);
-	transition: 1s ease-in;
+	transition: 1s ease-out;
 }	
 .summary a:hover{
 	text-decoration: none; 
 	color: var(--head-color);
+	font-size: larger;
+	
 }
 footer { 
 	text-align: center; 
@@ -165,10 +167,16 @@ footer {
 	color: var(--light-tan);
 	font-size: 1.5rem;
 	}
-footer a:link, footer a:visited { 
+footer a  { 
 	margin-right: 20px; 
-	color: var(--light-tan)
+	color: var(--light-tan);
+	text-decoration: none;
+	transition:1s ease-out;
 	}
+footer a:hover {
+	color: var(--dark-purple);
+}	
+
 
 .sidebar {
 	margin-left: 600px; 
@@ -223,9 +231,12 @@ footer a:link, footer a:visited {
 	}
 .sidebar a {
 	color: var(--blue-gray);
+	text-decoration: none;
+	transition: 1s ease-out;
 	}
 .sidebar a:hover {
 	color: var(--light-tan);
+	font-size: larger;
 }
 .sidebar li a:visited {
 	color: var(--light-tan);
